<resources>
    <string name="app_name">Trip Comment</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="news_feed">News Feed</string>
    <string name="timeline">Time Line</string>
    <string name="header">Header</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_start_trip">Start Trip</string>
    <string name="trip">Trip</string>
    <string name="photo">Photo</string>
    <string name="video" translatable="false">Video</string>
    <string name="sound_record">Sound Record</string>
    <string name="title_activity_record_audio">Audio Record</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="password_again">Password (again)</string>
    <string name="passwords_not_same">Passwords are not same.</string>
    <string name="note">Note</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete_sure">Are you sure to delete?</string>
    <string name="yes">Yes</string>
    <string name="share_options">Share Options</string>
    <string name="eveybody">Everybody</string>
    <string name="only_my_friends">Only My Friends</string>
    <string name="only_me">Only Me</string>
    <string name="trips">Trips</string>
    <string name="give_a_name">Give a name to this trip</string>
    <string name="logout">Log Out</string>
    <string name="register_ok">Account created successfully.</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="wo_login">Contiune without login</string>
    <string name="change_name">Change Trip Name</string>
    <string name="internet_warning">There is no Internet connection at the moment. Please try again later.</string>
    <string name="friend_list_unsuccessful">Friend list cannot retrieving.</string>
    <string name="trip_explain">Explanation about this trip</string>
    <string name="teamTripUnsuccesful">Team trip cannot started now.</string>
    <string name="trip_created">New trip created. Start recording.</string>
    <string name="trip_finished">Trip finished. Trip added to timeline.</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="invitation">Trip Invitation</string>
    <string name="invitee">Invitee :</string>
    <string name="explain">Explanation :</string>
    <string name="members">Members :</string>
    <string name="active_trip_warning">There is an active trip at the moment. Cannot start new one.</string>
    <string name="unsuccessful_download">There was an error occurred when downloading.</string>
    <string name="choose_path">You can choose a path to follow</string>
    <string name="invite_friends">Invite your friends</string>
    <string name="trip_name">Trip Name:</string>
    <string name="downloads">Downloads</string>
    <string name="nothing">There is nothing</string>
    <string name="default_share_options">Default Share Option</string>
    <string name="saved">Saved</string>
    <string name="shared_before">This trip shared before.</string>
    <string name="trip_sharing">Preparing to share. You can watch process from notification bar.</string>
    <string name="no_media">There is no media file to make cover.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="invited_friends">Friends to be invited</string>
    <string name="error">An error occurred.</string>
    <string name="enable_live_location">Enable live tracking on team trips</string>
    <string name="invitations">Trip Invitations</string>
    <string name="friendship_requests">Friendship Requests</string>
    <string name="friendship_request">Friendship Request</string>
    <string name="change_cover">Change cover photo</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="last_added">Last added media</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="sharing">Trip sharing…</string>
    <string name="trip_accepting">Trip invitation accepting.</string>
    <string name="friend_request_accepting">Friend request accepting.</string>
    <string name="friend_accepted">Friendship request accepted.</string>
    <string name="quit_sure">Are you sure want to quit?</string>
    <string name="sevce_cannot_started">Save service cannot started. Location permission is not granted.</string>
    <string name="service_started">Location save enabled.</string>
    <string name="service_stopped">Save service stopped.</string>
    <string name="service_open">Location track enabled.</string>
    <string name="cannot_save_media">Location service not active. Cannot save media.</string>
    <string name="warn_storage">Cannot save media unless storage permission.</string>
    <string name="warn_sound_record">Cannot save voice without sound record permission.</string>
    <string name="warn_camera">Cannot use camera.</string>
    <string name="warn_location">Cannot save location without location permission.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="website">Website</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="select">Select a photo</string>
    <string name="pp_success">Profile photo changed successfuly.</string>
    <string name="update_successful">Information updated successfully.</string>
    <string name="cannot_empty">cannot empty.</string>
    <string name="username_wrong">Username can contain only English characters.</string>
    <string name="username_empty">Username cannot be empty.</string>
    <string name="not_suitable_for_share">This trip is not suitable for share. There is no location data.</string>
    <string name="trips_info">See your trips as list. After that watch on timeline.</string>
    <string name="timeline_info">See your trips on map with media markers and path.</string>
    <string name="downloads_info">See your downloaded trips on map like timeline.</string>
    <string name="trip_info">Start a new trip or watch started one.</string>
    <string name="successful_download">Trip downloaded successfully.</string>
    <string name="uploading_trip">Uploading Trip.</string>
    <string name="upload_successful">Trip shared.</string>
    <string name="too_big_to_share">This trip is bigger than 100 MB. Cannot share.</string>
    <string name="gps_not_enabled">Your GPS not enabled. Please enable your GPS.</string>
    <string name="home_screen">Home Screen</string>
    <string name="no_file_selected">There is no file selected.</string>
    <string name="trip_download">Trip Downloading…</string>
    <string name="uploading_picture">Uploading profile picture…</string>
    <string name="choose">Choose</string>
    <string name="preparing">Preparing trip for share…</string>
    <string name="denying_friend_request">Working on deny friend request.</string>
    <string name="denied_friend_request">Friend request denied.</string>
    <string name="denying_trip_request">Working on deny trip request.</string>
    <string name="denied_trip_request">Trip request denied.</string>
    <string name="return_startup">Return to home screen</string>
    <string name="biography">Tell us about yourself</string>
    <string name="go_profile">Look at profile</string>
    <string name="email_activation_required">Email activation required.</string>
    <string name="ok">OK</string>
    <string name="user_not_exist">This user not exist.</string>
    <string name="gallery">Gallery</string>
    <string name="size">Size:</string>
    <string name="sure_to_upload">Are you sure to upload? This process will may to use cellular data.</string>
    <string name="forget_password">Forget password?</string>
    <string name="forget_password_ok">You can refresh your password using the link in email send to you.</string>
    <string name="please_wait">Please wait…</string>
    <string name="cant_upload">Team leader didn\'t uploaded anything yet.</string>
    <string name="trip_downloading">Trip downloading. You watch process on notification bar.</string>
</resources>
