<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_timeline"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/timeline" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_trip"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/trip" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
