<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.murat.gezi_yorum.Fragments.WelcomeScreen">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button android:layout_height="wrap_content"
                android:id="@+id/nav_profile"
                android:layout_width="match_parent"
                android:background="@color/colorLowAlpha"
                android:drawableTop="@drawable/ic_action_avatar"
                android:layout_margin="5dp"
                android:text="@string/profile"
                />
            <Button
                android:id="@+id/nav_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLowAlpha"
                android:drawableTop="@drawable/ic_action_news"
                android:layout_margin="5dp"
                android:text="@string/news_feed"/>
            <Button
                android:id="@+id/nav_trips"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/colorLowAlpha"
                android:drawableTop="@drawable/ic_menu_slideshow"
                android:layout_margin="5dp"
                android:text="@string/trips"
                />
            <Button
                android:id="@+id/nav_timeline"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/colorLowAlpha"
                android:drawableTop="@drawable/ic_action_map"
                android:layout_margin="5dp"
                android:text="@string/timeline"
                />
            <Button
                android:id="@+id/nav_downloads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLowAlpha"
                android:drawableTop="@drawable/ic_action_download"
                android:layout_margin="5dp"
                android:text="@string/downloads"/>
            <Button
                android:id="@+id/nav_search"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/colorLowAlpha"
                android:drawableTop="@drawable/ic_action_search"
                android:layout_margin="5dp"
                android:text="@string/search"
                />
            <Button
                android:id="@+id/nav_trip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLowAlpha"
                android:drawableTop="@drawable/ic_action_trip"
                android:layout_margin="5dp"
                android:text="@string/trip"/>
            <Button
                android:id="@+id/nav_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLowAlpha"
                android:drawableTop="@drawable/ic_menu_manage"
                android:layout_margin="5dp"
                android:text="@string/action_settings"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
