<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.murat.gezi_yorum.EditProfile"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>
        <Button
            android:id="@+id/change_pp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_profile_photo"
            android:textAppearance="@style/TextAppearance.AppCompat" />
        <TextView
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/name_edit"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/surname"/>
        <EditText
            android:id="@+id/surname_edit"
            android:maxLength="25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/biography"/>
        <EditText
            android:id="@+id/biography_edit"
            android:maxLength="255"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/website"/>
        <EditText
            android:id="@+id/website_edit"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/email"/>
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/email_edit"
            android:maxLength="50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:text="@string/phone"/>
        <EditText
            android:inputType="phone"
            android:id="@+id/phone_edit"
            android:hint="+905xxxxxxxxx"
            android:maxLength="13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</ScrollView>
