<?xml version="1.0" encoding="utf-8"?>
    <RadioGroup
    android:id="@+id/share_options_radio"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
        <RadioButton android:id="@+id/everybody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eveybody"
            />
        <RadioButton android:id="@+id/my_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_my_friends"
            />
        <RadioButton android:id="@+id/only_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_me"
            />
    </RadioGroup>