<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/notification_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:drawableEnd="@drawable/aar_ic_check"
            android:backgroundTint="@android:color/holo_green_light"
            />
        <Button
            android:id="@+id/deny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deny"
            android:drawableEnd="@drawable/aar_ic_clear"
            android:backgroundTint="@android:color/holo_red_light"/>
        <Button
            android:id="@+id/look_at_profile"
            android:drawableEnd="@drawable/ic_action_look"
            android:text="@string/go_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>